Fixing merge issues + getting spacing into Sass

--- a/scss/_title-bars.scss
+++ b/scss/_title-bars.scss
@@ -1,4 +1,24 @@
 .title-bar {
+
+  // Organize the title bar
+  %container-flex-properties {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+
+  > .container,
+  > .container-fluid {
+    @extend %container-flex-properties;
+  }
+
+  @each $breakpoint, $container-max-width in $container-max-widths {
+    > .container#{breakpoint-infix($breakpoint, $container-max-widths)} {
+      @extend %container-flex-properties;
+    }
+  }
+
+  // Title bar's objects sizes
   img,
   svg {
     width: auto;
@@ -8,11 +28,12 @@
   h1,
   & {
     font-size: $h2-font-size;
-    line-height: $display-line-height;
+    line-height: $h2-line-height;
     letter-spacing: $h2-spacing;
 
     @include media-breakpoint-up(md) {
       font-size: $display2-size;
+      line-height: $display-line-height;
       letter-spacing: $display2-spacing;
     }
 
@@ -20,5 +41,30 @@
       font-size: $display1-size;
       letter-spacing: $display1-spacing;
     }
+  }
+
+  // Spacing of the title
+  h1 {
+    padding: $spacer * .85 0 $spacer * .5; // 17px 0 10px
+    margin: 0;
+
+    @include media-breakpoint-up(md) {
+      padding: $spacer * 1.5 0 $spacer * .95; // 30px 0 19px
+    }
+
+    @include media-breakpoint-up(xl) {
+      padding: $spacer * 1.8 0 $spacer * 1.15; // 36px 0 23px
+    }
+  }
+
+  // Substitute for border-bottom
+  &::after {
+    display: block;
+    height: map-get($border-widths, 1);
+    content: "";
+    background-color: $gray-500;
+  }
+  &.bg-dark::after {
+    background-color: $gray-700;
   }
 }
